修复PostgreSQL下无法搜索正文的问题